@@ -1,1 +1,1 @@
-shd-nagios-plugins-opensource_0.6_i386.deb shd optional
+shd-nagios-plugins-opensource_0.7_i386.deb shd optional
