@@ -1,5 +1,5 @@
 Package: shd-nagios-plugins-opensource
-Version: 0.6
+Version: 0.7
 Architecture: i386
 Maintainer: SM-Box Development Team <smbox-devel-team@shd-online.de>
 Installed-Size: 100
