@@ -1,3 +1,9 @@
+shd-nagios-plugins-opensource (0.8) 5; urgency=low
+
+  * renamed plugin xen
+
+ -- Stefan Kauerauf <stefan.kauerauf@shd-online.de>  Mon, 19 May 2014 16:11:18 +0200
+
 shd-nagios-plugins-opensource (0.7) 5; urgency=low
 
   * added license header
